--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,6 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get Webflow Site $SITE
-        uses: loomchild/webflow-get
+        uses: loomchild/webflow-get@v1
         with:
           site: $SITE
