--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,6 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get Webflow Site ${{ env.SITE }}
-        uses: loomchild/webflow-get@v1.1
+        uses: loomchild/webflow-get@master
         with:
           site: ${{ env.SITE }}
