--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get Site
-        run: echo "SITE=$(cat .site | xargs)" >> $GITHUB_ENV
+        run: |
+          if [ -e $GITHUB_WORKSPACE/.site ] |
+          then |
+            echo "SITE=$(cat $GITHUB_WORKSPACE/.site | xargs)" >> $GITHUB_ENV |
+          else |
+            exit 1 |
+          fi
 
       - name: Get Webflow Site ${{ env.SITE }}
         uses: loomchild/webflow-get@master
