--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,11 @@ jobs:
 
       - name: Get Site
         run: |
-          if [ -e $GITHUB_WORKSPACE/.site ] |
-          then |
-            echo "SITE=$(cat $GITHUB_WORKSPACE/.site | xargs)" >> $GITHUB_ENV |
-          else |
-            exit 1 |
+          if [ -e $GITHUB_WORKSPACE/.site ]
+          then
+            echo "SITE=$(cat $GITHUB_WORKSPACE/.site | xargs)" >> $GITHUB_ENV
+          else
+            exit 1
           fi
 
       - name: Get Webflow Site ${{ env.SITE }}
