fix push and pull

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,4 @@ jobs:
           author_name: Webflow Git
           author_email: webflowgit@local
           message: 'Site updated'
+          pull_strategy: '--rebase'
