--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Process Webflow Sites
-        uses: loomchild/webflow-get@master
+        uses: loomchild/webflow-get@v1
 
       - name: Commit and Push
         uses: EndBug/add-and-commit@v7
